...
    
    var mealPlanSummarySection: some View {
        Section("Summary") {
            
            TextField("Meal plan name", text: $viewModel.mealPlanName)
                .textFieldStyle(.roundedBorder)
                .accessibilityIdentifier("meal-plan-title-textfield")
            RecipeSummaryView(
                cal: viewModel.mealPlan.nutrition.calories,
                proteinInGrams: viewModel.mealPlan.nutrition.protein,
                fatInGrams: viewModel.mealPlan.nutrition.fat,
                carbInGrams: viewModel.mealPlan.nutrition.carb,
                format: "%.0f",
...
            HStack{
                Text("Meal #\(index + 1)")
                Spacer()
                Button {
                    viewModel.deleteMeal(meal)
                } label: {
                    Label("Delete meal", systemImage: "trash.circle.fill")
                        .foregroundColor(.red)
                }
            }
        } // END OF HEADER
        .headerProminence(.increased)
    }
...
