...
               Tag(id: UUID(), text: "Cilantro"),
               Tag(id: UUID(), text: "Lunch"),
               Tag(id: UUID(), text: "Lime"),
              Tag(text: "Dinner")])
    
    static let recipeBreakfastPotatoHash = Recipe(
        name: "Breakfast potato hash",
        servings: 1,
        timeCookingInMinutes: 15,
        timePreparingInMinutes: 5,
        timeWaitingInMinutes: 0,
        ingredients: [
        Ingredient(food: Food(name: "Potatoes"), quantity: 250, unitOfMeasure: "gram", nutritionData: Nutrition(calories: 192, carb: 44, fat: 0, protein: 5)),
...
        let lunch = Meal(ingredients: [Ingredient(food: Food(name: "Rice"), quantity: 50, unitOfMeasure: "grams", nutritionData: Nutrition(calories: 65, carb: 14, fat: 0.2, protein: 1.4))], recipies: [recipeSlowCookerChickenTikkaMasala])
        let dinner = Meal(ingredients: [
            Ingredient(food: Food(name: "Pork shoulder"), quantity: 200, unitOfMeasure: "grams", nutritionData: Nutrition(calories: 514, carb: 0, fat: 43, protein: 32)),
            Ingredient(food: Food(name: "Potatoes"), quantity: 250, unitOfMeasure: "gram", nutritionData: Nutrition(calories: 192, carb: 44, fat: 0, protein: 5)),
            Ingredient(food: Food(name: "Coleslaw"), quantity: 100, unitOfMeasure: "grams", nutritionData: Nutrition(calories: 98, carb: 11, fat: 6, protein: 1))
        ])
        return MealPlan(name: "Sample Test Plan", meals: [breakfast, lunch, dinner])
    }
}

