...
                    .buttonStyle(.borderedProminent)
                    if image != nil {
                        Button(role: .destructive) {
                            viewModel.deleteImageData()
                            self.image = nil
                        } label: {
                            Text("Delete")
                        } // END OF BUTTON
                        .accessibilityIdentifier("delete-photo")
                        .buttonStyle(.borderedProminent)
                    } // END OF IF
                    Spacer()
                } // END OF HSTACK
...
                
                TextField("Add new tag", text: $viewModel.tagText)
                    .onSubmit {
                        viewModel.addTag()
                    }
                
                Button("Add") {
                    viewModel.addTag()
                }
                .disabled(viewModel.tagText.isEmpty)
                .buttonStyle(.borderedProminent)
            } // END OF HSTACK
        } // END OF SECTION
...
